5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1601_2425.log
== SUBMITION (2019-04-03 18:22:29) 
-- CODE:
km = float(input("digite um numero"))
l = float(input("digite um numero"))
total = roun(km/l ,3)
print(total,"km/l")
-- EXECUTION TIME:
0.120841
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2425/main.py", line 3, in <module>
    total = roun(km/l ,3)
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:22:41) 
-- CODE:
km = float(input("digite um numero"))
l = float(input("digite um numero"))
total = roun(km/l ,3)
print(total,"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total = roun(km/l ,3)
NameError: name 'roun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:23:13) 
-- CODE:
km = float(input("digite um numero"))
l = float(input("digite um numero"))
total = round(km/l ,3)
print(total,"km/l")
-- EXECUTION TIME:
0.183764
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
